Added picture display of both people in the marriage

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -10,6 +10,7 @@
     <h1>Welcome to the site!</h1>
     <h2>Here is a pic</h2>
     <h3>Hello! {{name}}</h3>
-    <img src="../static/{{name}}.jpg" alt="">
+    <img src="../static/{{name1}}.jpg" alt="">
+    <img src="../static/{{name2}}.jpg" alt="">
 </body>
 </html>
